# ia_planta_parte_3

./: README.md  bot.py  data.csv  data_plant.csv  embeddings.py  example.env  inferencia.py  main.py  plant.py  polling.py  pyproject.toml  requirements.txt  send_status.ino
index_csv/: docstore.json  index_store.json
index_culantrillo/: default__vector_store.json  docstore.json  index_store.json
index_files/: docstore.json  index_store.json
